linux native aio support

--- a/Makefile.am
+++ b/Makefile.am
@@ -85,6 +85,7 @@ include_HEADERS += include/uv-unix.h
 AM_CPPFLAGS += -I$(top_srcdir)/src/unix
 libuv_la_SOURCES += src/unix/async.c \
                    src/unix/atomic-ops.h \
+                   src/unix/aio.c \
                    src/unix/core.c \
                    src/unix/dl.c \
                    src/unix/fs.c \
